--- a/www/ITF/show.html
+++ b/www/ITF/show.html
@@ -11,7 +11,7 @@
     <body>
 <?php
 $conn = mysqli_init();
-mysqli_real_connect($conn, 'phufarpsw.mysql.database.azure.com', 'phufarpsw@phufarpsw', 'EMLbmk28', 'itflab', 3306);
+mysqli_real_connect($conn, 'putterlnwza.mysql.database.azure.com', 'it63070138@putterlnwza', 'FXFlxm58', 'itflab', 3306);
 if (mysqli_connect_errno($conn))
 {
     die('Failed to connect to MySQL: '.mysqli_connect_error());
@@ -35,9 +35,9 @@ while($Result = mysqli_fetch_array($res))
 ?>
         <tbody>
                 <tr>
-            <td><?php echo $Result['name'];?></td>
-            <td><?php echo $Result['comment'];?></td>
-            <td><?php echo $Result['link'];?></td>
+            <td><?php echo $Result['Name'];?></td>
+            <td><?php echo $Result['Comment'];?></td>
+            <td><?php echo $Result['Link'];?></td>
             <td>
                 <a href="edit.php?ID=<?php echo $Result['ID']?>" class="btn btn-outline-success" >EDIT</a>
                 <a href="del.php?ID=<?php echo $Result['ID']?>" class="btn btn-outline-danger"onclick="return confirm('Confirm data deletion?')">DELETE</a>
